<resources>
    <string name="app_name">IBOX</string>

    <!-- Strings related to activity -->
    <string name="app_main_title">IBOX</string>
    <string name="app_register_title">注册</string>
    <string name="app_forget_password_title">忘记密码</string>

    <!-- Strings related to login -->
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="login_button_forget_password">忘记用户名或密码？</string>
    <string name="forget_password">忘记密码</string>
    <string name="update_password">确认更改密码</string>
    <string name="login">登 录</string>
    <string name="new_register">新用户注册</string>
    <string name="text_error_phone_null">号码不能为空</string>
    <string name="text_error_password_null">密码不能为空</string>
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>

    <!-- Strings related to register -->
    <string name="register">注 册</string>
    <string name="hint_password2">请再次输入密码</string>
    <string name="return_login">返回登录</string>

    <!-- Strings related to forget_password -->
    <string name="get_code">获取验证码</string>
    <string name="hint_code">请输入验证码</string>
    <string name="modify_password">确认修改</string>

    <!-- Strings related to NavigationView -->
    <string name="navigation_userinfo">个人信息</string>
    <string name="navigation_collection">收藏</string>
    <string name="navigation_photos">照片</string>
    <string name="navigation_trade">交易记录</string>
    <string name="navigation_sys_set">系统设置</string>
    <string name="navigation_about">关于</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Strings related to Message -->
    <string name="message_title">消息</string>

    <!-- Strings related to Edit Things -->
    <string name="edit_things_title">添加物品</string>

    <string name="press_again_exit_app">再按一次退出程序</string>

    <!-- Strings related to show_goods -->
    <string name="goods_title">高端无线蓝牙耳机</string>
    <string name="unsell">未出售</string>
    <string name="sell">已出售</string>
    <string name="modify_goods">修改</string>
    <string name="goods_num">数量</string>
    <string name="goods_condition">成色</string>
    <string name="goods_addr">所在地</string>
    <string name="data_addr">杭州</string>
    <string name="goods_intime">入手时间</string>
    <string name="data_intime">2015-12-12</string>
    <string name="goods_new_condition">全新</string>
    <string name="goods_description">商品描述:</string>
    <string name="data_description">全新国行仅拆封，带防伪码，大昌行货，送给女朋友的，她听了不到半天就收起来了，嫌弃耳机太大！配件包装片纸不少，佩戴舒适度，音质，做工均比H6上一个层次，12月12日购买，要的加我QQ，309714528，价格2350</string>
    <string name="goods_comment">评论:</string>
    <string name="data_comment_num">2</string>
    <string name="more_comment">查看更多评论</string>
    <string name="comment_name">小美</string>
    <string name="comment_content">包邮350入手</string>
    <string name="comment_time">45分钟前</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_scrolling">MyScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
