<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/back_toolbar"
        layout="@layout/simple_toolbar" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumWrapper"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edit_forget_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_phone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_code"
            android:id="@+id/button_get_code"
            android:layout_marginTop="20dp"
            android:layout_marginRight="18dp"
            android:textSize="18dp"/>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_code" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/forget_password"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:background="@color/colorButton_register"
        android:id="@+id/forget_password_button"
        android:onClick="login"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
